<resources>
    <string name="app_name">MSO_Lab</string>
    <string name="index">172166</string>
    <string name="name">Wojciech Niewiadomski</string>
    <string name="Window2Button">Okno 2</string>
    <string name="drawButton">Rysuj</string>
    <string name="Window3Button">Okno 3</string>
    <string name="Window4Button">Okno 4</string>
    <string name="Window5Button">Okno 5</string>
    <string name="Window6Button">Okno 6</string>
    <string name="textview">TextView</string>
    <string name="EditText3">Wpisz tekst</string>
    <string name="AddRecordBtn">Dodaj Wpis</string>
    <string name="listViewBtn">Wyświetl tabelę</string>

    <string name="service_started">Example Service started</string>
    <string name="service_label">Example Service Label</string>
    <string name="increment">Zwiększ o 1</string>
    <string name="decrement">Zmniejsz o 1</string>
    <string name="bindToService">Połącz</string>
    <string name="unbindFromService">Odłącz</string>
    <string name="startService">Start Service</string>
    <string name="stopService">Stop Service</string>


    <string name="binding">Podłączanie</string>
    <string name="attached">Podłączono</string>
    <string name="ubinding">Odłączanie</string>
    <string name="unbound">Odłączono</string>
    <string name="unattached">Niepodłączono</string>
    <string name="intOutput">Wynik : 0</string>
    <string name="opNotChosen">Nie wybrano operacji</string>
    <string name="win2Text">Okno 2</string>
    <string name="win3Text">Okno 3</string>
    <string name="win4Text">Okno 4</string>
    <string name="win5Text">Okno 5</string>
    <string name="win6Text">Okno 6</string>
    <string name="changedText" />
    <string name="changed_text_descr">"Tekst zmieniony: "</string>
    <string name="original_text_descr">"Tekst oryginalny: "</string>
    <string name="change">Zmień</string>
    <string name="enterText">Wpisz tekst</string>
    <string name="addNumberHint">Wpisz liczbę</string>
    <string name="add">Dodaj</string>
    <string name="notSortedDescr">"Tablica nieposortowana: "</string>
    <string name="SortedDescr">Tablica posortowana</string>
    <string name="notSortedArray" />
    <string name="sortedArray" />
    <string name="sort">Sortuj</string>

</resources>