<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Window4">


    <TextView
        android:id="@+id/win4Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/win4Text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/win6Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:text="@string/Window6Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/win5Button" />

    <Button
        android:id="@+id/win3Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Window3Button"
        app:layout_constraintEnd_toStartOf="@+id/win5Button"
        app:layout_constraintTop_toTopOf="@+id/win2Button" />

    <Button
        android:id="@+id/win5Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Window5Button"
        app:layout_constraintEnd_toStartOf="@+id/win6Button"
        app:layout_constraintTop_toTopOf="@+id/win3Button" />

    <Button
        android:id="@+id/win2Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="568dp"
        android:text="@string/Window2Button"
        app:layout_constraintEnd_toStartOf="@+id/win3Button"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textStatus"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="368dp"
        android:text="@string/unattached"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textIntValue"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/intOutput"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textStatus" />

    <TextView
        android:id="@+id/textStrValue"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/opNotChosen"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textIntValue" />

    <Button
        android:id="@+id/incrementBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/increment"
        app:layout_constraintStart_toStartOf="@+id/btnBind"
        app:layout_constraintTop_toBottomOf="@+id/btnBind" />

    <Button
        android:id="@+id/decrementBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:text="@string/decrement"
        app:layout_constraintEnd_toEndOf="@+id/btnUnbind"
        app:layout_constraintTop_toTopOf="@+id/incrementBtn" />

    <Button
        android:id="@+id/btnBind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/bindToService"
        app:layout_constraintStart_toStartOf="@+id/btnStart"
        app:layout_constraintTop_toBottomOf="@+id/btnStart" />

    <Button
        android:id="@+id/btnUnbind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/unbindFromService"
        app:layout_constraintEnd_toEndOf="@+id/btnStop"
        app:layout_constraintTop_toTopOf="@+id/btnBind" />

    <Button
        android:id="@+id/btnStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="132dp"
        android:text="@string/startService"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginStart="96dp"
        android:layout_marginLeft="96dp"
        android:text="@string/stopService"
        app:layout_constraintStart_toEndOf="@+id/btnStart"
        app:layout_constraintTop_toTopOf="@+id/btnStart" />

</androidx.constraintlayout.widget.ConstraintLayout>