<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Window6">


    <TextView
        android:id="@+id/win6Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/win6Text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/win5Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:text="@string/Window5Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/win4Button" />

    <Button
        android:id="@+id/win3Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Window3Button"
        app:layout_constraintEnd_toStartOf="@+id/win4Button"
        app:layout_constraintTop_toTopOf="@+id/win2Button" />

    <Button
        android:id="@+id/win4Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Window4Button"
        app:layout_constraintEnd_toStartOf="@+id/win5Button"
        app:layout_constraintTop_toTopOf="@+id/win3Button" />

    <Button
        android:id="@+id/win2Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="568dp"
        android:text="@string/Window2Button"
        app:layout_constraintEnd_toStartOf="@+id/win3Button"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/text_from_c"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/changedText"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/text_to_change"
        app:layout_constraintTop_toTopOf="@+id/changed_text_descr" />

    <TextView
        android:id="@+id/changed_text_descr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/changed_text_descr"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/original_text_descr"
        app:layout_constraintTop_toBottomOf="@+id/original_text_descr" />

    <TextView
        android:id="@+id/text_to_change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:text="@string/changedText"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/original_text_descr"
        app:layout_constraintTop_toTopOf="@+id/original_text_descr" />

    <TextView
        android:id="@+id/original_text_descr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/original_text_descr"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/original_text"
        app:layout_constraintTop_toBottomOf="@+id/original_text" />

    <Button
        android:id="@+id/changed_text_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/change"
        app:layout_constraintStart_toEndOf="@+id/original_text"
        app:layout_constraintTop_toTopOf="@+id/original_text" />

    <EditText
        android:id="@+id/original_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="404dp"
        android:ems="10"
        android:hint="@string/enterText"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/addNumber"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="184dp"
        android:ems="10"
        android:hint="@string/addNumberHint"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/addNumberButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/add"
        app:layout_constraintStart_toEndOf="@+id/addNumber"
        app:layout_constraintTop_toTopOf="@+id/addNumber" />

    <TextView
        android:id="@+id/notSortedArrayDescr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/notSortedDescr"
        app:layout_constraintStart_toStartOf="@+id/addNumber"
        app:layout_constraintTop_toBottomOf="@+id/addNumber" />

    <TextView
        android:id="@+id/SortedArrayDescr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/SortedDescr"
        app:layout_constraintStart_toStartOf="@+id/notSortedArrayDescr"
        app:layout_constraintTop_toBottomOf="@+id/notSortedArrayDescr" />

    <TextView
        android:id="@+id/notSortedArray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notSortedArray"
        app:layout_constraintStart_toStartOf="@+id/sortedArray"
        app:layout_constraintTop_toTopOf="@+id/notSortedArrayDescr" />

    <TextView
        android:id="@+id/sortedArray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="16dp"
        android:text="@string/sortedArray"
        app:layout_constraintStart_toEndOf="@+id/SortedArrayDescr"
        app:layout_constraintTop_toBottomOf="@+id/notSortedArray" />

    <Button
        android:id="@+id/sortButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/sort"
        app:layout_constraintStart_toEndOf="@+id/addNumberButton"
        app:layout_constraintTop_toTopOf="@+id/addNumberButton" />


</androidx.constraintlayout.widget.ConstraintLayout>