<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Window5">

    <TextView
        android:id="@+id/win5Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/win5Text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/win6Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:text="@string/Window6Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/win4Button" />

    <Button
        android:id="@+id/win3Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Window3Button"
        app:layout_constraintEnd_toStartOf="@+id/win4Button"
        app:layout_constraintTop_toTopOf="@+id/win2Button" />

    <Button
        android:id="@+id/win4Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Window4Button"
        app:layout_constraintEnd_toStartOf="@+id/win6Button"
        app:layout_constraintTop_toTopOf="@+id/win3Button" />

    <Button
        android:id="@+id/win2Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="568dp"
        android:text="@string/Window2Button"
        app:layout_constraintEnd_toStartOf="@+id/win3Button"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:text="Not Implemented"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="24sp"
        tools:ignore="HardcodedText" />


</androidx.constraintlayout.widget.ConstraintLayout>